k8s/manifests/guestbook/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook
  labels:
    name: guestbook
