k8s/manifests/guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: guestbook
  labels:
    app: guestbook-ui
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: guestbook-ui
  type: ClusterIP
